# RLMuscle

./: .env  .gitattributes  .gitignore  .gitmodules  AGENT.md  AGENTS.md  CLAUDE.md  PLAN.md  PROGRESS.md  README.md  log.md  main.py  pyproject.toml
.claude/: settings.local.json
data/Human/: Human.usd  data_prepare.hip  human_import2.json
data/pendulum/: pendulum.usda
data/simpleArm/: config.json
data/slidingBall/: config.json  config_xpbd_dgf.json  config_xpbd_millard.json
doc/: plan-couple.md
docs/experiments/: 2026-03-24-vbd-opensim-sliding-ball.md  2026-03-30-coupling-controllability.md  2026-04-04-performance-analysis.md  2026-04-04-svd-repair-sweep.md  exp-instruction.md  newton-solver.md  vbd_code_analysis.md
docs/notes/: couple3_mesh_quality_pipeline.md  couple3_technical_report.md  dexterous_muscle_formulation.md  millard_curves_formulation.md  muscle-force-transfer.md  osim_simple_arm.md  stage5_force_routes.md  symbols.md  vbd_energy.cl  (+1 more)
examples/: example_bicep_usd_io.py  example_couple.py  example_couple2.py  example_couple3.py  example_couple_usd_export.py  example_dynamics.py  example_human_import.py  example_human_import2.py  example_minimal_bone_muscle_import.py  example_minimal_joint.py  example_minimal_usd_export.py  example_minimal_usd_import.py  example_mujoco_simple_arm.py  example_muscle_sliding_ball.py  example_muscle_taichi.py  example_muscle_warp.py  example_tetmesh_import.py  example_tetmesh_import_gl.py  example_usd_io.py  example_vbd_coupled_simple_arm.py  example_vbd_mujoco_simple_arm.py  example_warp_mesh.py  example_xpbd_coupled_simple_arm.py  example_xpbd_coupled_simple_arm_millard.py  example_xpbd_dgf_sliding_ball.py  example_xpbd_millard_sliding_ball.py  simple_arm_xpbd.py
scripts/: experiment_dynamic_target.py  experiment_energy_constraint.py  osim_compat.py  osim_simple_arm.py  osim_simple_arm_dgf.py  osim_simple_arm_millard.py  osim_sliding_ball.py  osim_sliding_ball_millard.py  plot_couple3_curves.py  plot_sliding_ball.py  plot_stage5_results.py  profile_examples.py  run_couple3_curves.py  run_simple_arm_comparison.py  run_sliding_ball_comparison.py  run_sliding_ball_comparison_xpbd.py  run_xpbd_dgf_sliding_ball_comparison.py  run_xpbd_dgf_sliding_ball_comparison_xpbd.py  sweep_post_smooth.py  test_mesh_quality.py  usd_to_mp4.py
tests/: conftest.py  plan_couple_sim.py  test_constraint_target_groups.py  test_controllability.py  test_graph_color.py  test_mesh_quality.py  test_millard_curves.py  test_millard_gpu.py  test_muscle_warp_vs_taichi.py  test_perf_couple.py  test_plan_couple_regression.py  test_regression.py  test_solver_parameters.py  test_visual_comparison.py  test_warp_cpu_vs_cuda.py  test_warp_cuda_jacobi.py  test_xpbd_simple_arm.py
(+105 files in other folders)
