[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "rlmuscle"
version = "0.1.0"
description = "A Volumetric Muscle implementation for Reinforcement Learning environments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "newton[examples]",
    "taichi"
]

[tool.hatch.build.targets.wheel]
packages = ["src/VMuscle"]

[tool.uv.workspace]
members = [
    "external/newton",
]

[tool.uv.sources]
newton = { workspace = true }
