[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "rlmuscle"
version = "0.1.0"
description = "A Volumetric Muscle implementation for Reinforcement Learning environments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "newton[examples]",
    "python-dotenv>=1.2.1",
    "taichi",
]

[tool.hatch.build.targets.wheel]
packages = ["src/VMuscle"]

[tool.uv.workspace]
members = [
    "external/newton",
]

[tool.uv.sources]
newton = { workspace = true }

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "pytest>=9.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: long-running simulation tests (>30s)",
    "visual: generates PNG output for visual inspection",
    "cuda: requires CUDA GPU",
]
