[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "rlmuscle"
version = "0.1.0"
description = "A Volumetric Muscle implementation for Reinforcement Learning environments."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mujoco-warp>=3.5.0.2",
    "newton",
    "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = [
    "mujoco",
    "mujoco-warp @ git+https://github.com/google-deepmind/mujoco_warp",
    "scipy",
]
usd = [
    "usd-core-arm64>=26.3 ; sys_platform == 'linux' and platform_machine == 'aarch64'",
    "usd-core>=25.5 ; sys_platform != 'linux' or platform_machine != 'aarch64'",
]


[project.optional-dependencies]
optional = [
    "matplotlib>=3.10.8",
    "pytest>=9.0",
    "taichi",
    "newton[examples]",
]

[tool.hatch.build.targets.wheel]
packages = ["src/VMuscle"]

[tool.uv]
default-groups = ["dev", "usd"]

[tool.uv.workspace]
members = [
    "external/newton",
]

[tool.uv.sources]
newton = { workspace = true }
mujoco-warp = { git = "https://github.com/google-deepmind/mujoco_warp", tag = "v3.5.0.2" }


[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: long-running simulation tests (>30s)",
    "visual: generates PNG output for visual inspection",
    "cuda: requires CUDA GPU",
]

